--- a/UltimateMods/UltimateMods.csproj
+++ b/UltimateMods/UltimateMods.csproj
@@ -27,8 +27,8 @@
 	</ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.10.25" />
         <PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-be.562" />
-        <PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.9.20" PrivateAssets="all" />
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="1.1.1" PrivateAssets="all" />
     </ItemGroup>
 
