--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Sounds"]
 	path = UltimateMods/Resources/Sounds
 	url = https://github.com/Dekokiyo/Sounds
+[submodule "ClassicAmongUs"]
+	path = UltimateMods/ClassicAmongUs
+	url = https://github.com/Dekokiyo/ClassicAmongUs
