--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AssetsBundlesUM"]
 	path = UltimateMods/Resources/AssetsBundlesUM
 	url = https://github.com/Dekokiyo/AssetsBundlesUM
+[submodule "GodMiraHQ-UM"]
+	path = UltimateMods/GodMiraHQ
+	url = https://github.com/Dekokiyo/GodMiraHQ-UM
