--- a/UltimateMods/UltimateMods.csproj
+++ b/UltimateMods/UltimateMods.csproj
@@ -4,7 +4,7 @@
         <LangVersion>latest</LangVersion>
         <DebugType>embedded</DebugType>
 
-        <VersionPrefix>1.0.1</VersionPrefix>
+        <VersionPrefix>1.1.0</VersionPrefix>
         <Description>Ultimate Mods</Description>
 		<Authors>DekoKiyo</Authors>
 
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="Resources\**" />
+		<EmbeddedResource Include="GodMiraHQ\Resources\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -27,7 +28,13 @@
         <Reference Include="Reactor">
         <HintPath>..\..\Assembly\Reactor.dll</HintPath>
         </Reference>
-	</ItemGroup>
+	</ItemGroup> <!-- (コピペ用)
+
+    <ItemGroup>
+		<PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-be.562" />
+		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.8.23" />
+		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="1.1.1" PrivateAssets="all" />
+    </ItemGroup>-->
 
 	<ItemGroup>
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.10.25" />
