--- a/UltimateMods/UltimateMods.csproj
+++ b/UltimateMods/UltimateMods.csproj
@@ -25,9 +25,6 @@
 	<ItemGroup>
 		<Reference Include="$(AmongUs)/BepInEx/core/*.dll" />
 		<Reference Include="$(AmongUs)/BepInEx/unhollowed/*.dll" />
-        <Reference Include="Reactor">
-        <HintPath>..\..\Assembly\Reactor.dll</HintPath>
-        </Reference>
 	</ItemGroup> <!-- (コピペ用)
 
     <ItemGroup>
@@ -40,6 +37,12 @@
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.10.25" />
 		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.662" />
 		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="Reactor">
+	    <HintPath>..\Reactor.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 	<Target Name="CopyCustomContent" AfterTargets="AfterBuild" Condition="Exists('$(AmongUsLatest)/BepInEx/plugins/')">
