--- a/UltimateMods/UltimateMods.csproj
+++ b/UltimateMods/UltimateMods.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <DebugType>embedded</DebugType>
 
-        <VersionPrefix>1.2.0.1</VersionPrefix>
+        <VersionPrefix>1.2.1</VersionPrefix>
         <Description>Ultimate Mods</Description>
 		<Authors>DekoKiyo</Authors>
 
@@ -29,14 +29,14 @@
 	</ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-be.567" />
-		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.10.25" />
-		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="1.1.1" PrivateAssets="all" />
+		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.12.8" />
+        <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.663" />
+        <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" />
     </ItemGroup>
 
 	<Target Name="CopyCustomContent" AfterTargets="AfterBuild" Condition="Exists('$(AmongUsLatest)/BepInEx/plugins/')">
 		<Message Text="Second occurrence" />
-		<Copy SourceFiles="$(ProjectDir)\bin\$(Configuration)\.netstandard2.1\$(AssemblyName).dll" DestinationFolder="$(AmongUsLatest)/BepInEx/plugins/" />
+		<Copy SourceFiles="$(ProjectDir)\bin\$(Configuration)\.net6.0\$(AssemblyName).dll" DestinationFolder="$(AmongUsLatest)/BepInEx/plugins/" />
 	</Target>
 
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
